# bionic

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  ruff.toml
bionic/: __init__.py  __main__.py  compound.py  heat.py
bionic/buildings/: __init__.py  compost.py  ethanol_distiller.py  geyser.py  steam_turbine.py
bionic/calculations/: __init__.py  heat.py
bionic/critters/: critter.py  pip.py
bionic/data/: building.json  element.json
bionic/dataclasses/: __init__.py  element.py  entity.py  entity_bank.py  geyser.py
bionic/elements/: __init__.py  carbon_dioxide.py  dirt.py  element.py  element_bank.py  ethanol.py  hydrogen.py  igneous_rock.py  oxygen.py  phosphorite.py  polluted_dirt.py  polluted_water.py  steam.py  water.py
bionic/entities/: __init__.py  entity.py  entity_bank.py
bionic/food/: __init__.py  bristle_berry.py  food.py  gristle_berry.py  nosh_bean.py  pincha_peppernut.py  spicy_tofu.py  stuffed_berry.py  tofu.py
bionic/optimization/: compound.py  production.py
bionic/plants/: __init__.py  arbor_tree.py  bristle_blossom.py  nosh_sprout.py  pincha_pepper.py  plant.py
bionic/processors/: __init__.py  calorie_processor.py  duplicant.py  processor.py
bionic/recipes/: __init__.py  gristle_berry_recipe.py  recipe.py  spicy_tofu_recipe.py  stuffed_berry_recipe.py  tofu_recipe.py
bionic/resources/: __init__.py  lumber.py  nosh_bean.py  resource.py  resource_bank.py
bionic/simulation/: __init__.py  step.py
tests/: __init__.py  test_compound.py  test_element.py  test_entity.py  test_entity_bank.py  test_geyser.py  test_heat.py
tests/buildings/: __init__.py  test_geyser.py  test_steam_turbine.py
tests/calculations/: __init__.py  test_heat.py
tests/elements/: test_element.py  test_element_bank.py
tests/entities/: __init__.py  test_entity.py  test_entity_bank.py
tests/food/: __init__.py  test_food.py
tests/optimization/: __init__.py  test_compound.py  test_production.py
tests/plants/: __init__.py  test_plant.py
(+79 files in other folders)
