[project]
name = "bionic"
version = "0.1.0"
description = "Basically Irreplaceable Oxygen Not Included Calculator"
authors = [{name="Pendragonek", email="mateuszlekner@gmail.com"}]
license = "MIT"
requires-python = ">=3.12, <3.13"
dependencies = [
    "kivy>=2.3.1",
    "pydantic>=2.12.5",
]

[project.scripts]
bionic = "bionic.__main__:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
